First round of polishing.